--- a/course/00_Homeworks/index.qmd
+++ b/course/00_Homeworks/index.qmd
@@ -255,7 +255,7 @@ To start a pull request, click to see how your commit is ahead by
 
 ---
 
-Next, switch from the parent CytometryInR main branch (used for the website and course) to the homework branch (used for the take-home problems). 
+Next, switch from the parent CytometryInR main branch (used for the website and course) to the homework branch for that respective week (used for the take-home problems). 
 
 ![](images/15_BranchSwitch.png)
 
