--- a/course/00_WorkstationSetup/WindowsSlides.qmd
+++ b/course/00_WorkstationSetup/WindowsSlides.qmd
@@ -1,13 +1,17 @@
 ---
 title: "Installing Software on Windows"
 author: "David Rach"
-date: 01-21-2026
+date: 02-01-2026
 format:
   revealjs:
     theme: default
     slide-number: true
     incremental: true
 page-layout: full
+execute:
+  echo: true
+  warning: false
+  message: false
 ---
 
 ![](/images/WebsiteBanner.png)
@@ -16,19 +20,21 @@ page-layout: full
 [![AGPL-3.0](https://img.shields.io/badge/license-AGPLv3-blue)](https://www.gnu.org/licenses/agpl-3.0.en.html) [![CC BY-SA 4.0](https://img.shields.io/badge/License-CC%20BY--SA%204.0-lightgrey.svg)](http://creativecommons.org/licenses/by-sa/4.0/)
 :::
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 This is the software installation walkthrough for those whose computers are running Windows. Based on our pre-course interest form, you make up the majority of course participants. 
+:::
 :::
 
 ![](/course/00_WorkstationSetup/images/ComputerOS.png){width=100%}
 
 # Background
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 In this walkthrough, we will have you install the following pieces of software:
 
 [R website](https://www.r-project.org/) : The programming language we will be using throughout the course. 
@@ -41,711 +47,846 @@ Additionally, Windows users will need to install:
 
 [RTools](https://cran.r-project.org/bin/windows/Rtools/rtools45/rtools.html) : Used to build R packages from source code. 
 :::
+:::
 
 # Getting Started
 
-<br>
 
 ---
 
 ## Installing R
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 To get started, first navigate to the [R website](https://www.r-project.org/). Once there, click on [Download R](https://cran.r-project.org/mirrors.html) option towards the top of the page.
 :::
+:::
+
+---
 
 ![](images/Windows/01_RLanding.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 On the next screen, you will need to select a mirror from which to download the software from. You can either select the closest geographic location (which may be faster) or alternatively just select the [Cloud](https://cloud.r-project.org/) option which should redirect you. 
 :::
+:::
+
+---
 
 ![](images/Windows/02_Landing.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 You will then select your Operating System, in this case, [Windows](https://cloud.r-project.org/bin/windows/). 
 :::
+:::
+
+---
 
 ![](images/Windows/03_ForWindows.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 And go ahead and select the [Install R for the first time](https://cloud.r-project.org/bin/windows/base/) link. 
 :::
+:::
+
+---
 
 ![](images/Windows/04_ForFirstTime.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Next, you will select the download the current version option at the top of the page. 
 :::
+:::
+
+---
 
 ![](images/Windows/04_CurrentVersion.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 The popup window will then ask where you want to save the installer (.exe) file. We generally save this to either Downloads or Desktop to make finding it easier.
 :::
+:::
+
+---
 
 ![](images/Windows/05_SaveTheInstaller.png)
 
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 After the download is complete, double click on the installer's .exe file. This will open a popup asking you to select your preferred language. 
 :::
+:::
+
+---
 
 ![](images/Windows/07_DesiredLanguage.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 You will then be prompted to acccept the software license (which is the free copyleft GPL2 license, which we will learn about later in the course).
 :::
+:::
+
+---
 
 ![](images/Windows/08_GPL2.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 On Windows, R will normally save it's software folder under Program Files.
 :::
+:::
+
+---
 
 ![](images/Windows/09_ProgramFiles.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Next, please accept the defaults.
 :::
+:::
+
+---
 
 ![](images/Windows/10_Defaults.png)
 
-<br>
 
 ---
 
 
 ![](images/Windows/11_Defaults.png)
 
-<br>
-
 ---
 
 ![](images/Windows/12_Defaults.png)
-
-<br>
 
 ---
 
 ![](images/Windows/13_Defaults.png)
 
-<br>
-
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 With the defaults accepted, the installation will commence. Feel free to go have a coffee/tea/beverage-of-your choice break while you wait. 
 :::
+:::
+
+---
 
 ![](images/Windows/14_Install.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 And if all goes well, the installation will complete without any issues. 
 :::
+:::
+
+---
 
 ![](images/Windows/15_Success.png)
 
-<br>
 
 ---
 
 ## Installing RTools
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 We will now work on installing Rtools. This software is needed when building R packages from source, which we will need throughout the course for R packages hosted on GitHub. 
 
 To get started, we will return to the [R installation](https://cloud.r-project.org/) page we visited previously and instead click on the [Rtools](https://cloud.r-project.org/bin/windows/Rtools/) option.
 :::
+:::
+
+---
 
 ![](images/Windows/16_Rtools.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Next, select the most recent version of Rtools to Download.
 :::
+:::
+
+---
 
 ![](images/Windows/17_RtoolsRecent.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 You will then select for your architecture. For the vast majority of Windows users, your computer will likely be be using a  x86 chip  architecture, so you would select the Rtools45 installer option. 
 
 If your computer however uses the ARM chip architecture, you would select the 64-bit ARM Rtools45 installer instead. If you are unsure, see the [following](https://youtu.be/Z_lcEqomG0k?si=U0fd7sHTZhCJroSm).
 :::
+:::
+
+---
 
 ![](images/Windows/18_64x86.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Next, you will select the location to save the Rtools installer to. We generally save this to either Downloads or Desktop to make finding it easier.
 :::
+:::
 
+---
 
 ![](images/Windows/17_Downloads.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Once downloaded, double click on the .exe to launch the Rtools installer. 
 :::
+:::
+
+---
 
 ![](images/Windows/19_RtoolsInstall.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Similar to what we did when installing R, go ahead and keep the defaults. 
 :::
+:::
+
+---
 
 ![](images/Windows/20_RtoolsDefaults.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 And click install to proceed with the installation. 
 :::
+:::
+
+---
 
 ![](images/Windows/21_RtoolsDefaults.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 And wait while the installation wraps up. 
 :::
+:::
+
+---
 
 ![](images/Windows/22_Download.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 If all goes well, you should see the following installation success page. 
 :::
+:::
+
+---
 
 ![](images/Windows/24_Rtools.png)
 
-<br>
 
 ---
 
 ## Installing Git
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 [Git](https://git-scm.com/) is a version control software widely used among software developers and bioinformaticians. We will use it extensively throughout the course, both locally on our computers (to keep track of changes to our files), as well as in combination with [GitHub](https://github.com/)(to maintain online backups of our files). 
 
 We will first navigate to the [website](https://git-scm.com/) and select the download from Windows option.
 :::
-
-<br>
+:::
 
 ---
 
 ![](images/Windows/01_Git.png){fig-align="center" width="600"}
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 We will then proceed and select [install 64-bit Git for Windows Setup]{.underline} option
 :::
+:::
+
+---
 
 ![](images/Windows/02_Git.png){fig-align="center" width="600"}
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 As was the case with our installation of R and Rtools, a pop-up will appear asking for a location to save the installer to. 
 
 Once downloaded, double-click and proceed with the installation. 
 
 You will be asked to accept the Git License (which is the free copyleft GPL2 license, which we will learn about later in the course).
 :::
+:::
+
+---
 
 ![](images/Windows/02_GitLicense.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Then you will be asked to select the folder to save to software to (usually your Programs folder)
 :::
+:::
+
+---
 
 ![](images/Windows/03_GitDestination.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 At this point, the Git installer will ask a series of increasingly niche questions. It is best to just accept all the default options, to avoid wandering too far down a ["What is Vim?!?"](https://www.vim.org/) rabbit-hole.
 :::
+:::
+
+---
 
 ![](images/Windows/04_GitComponents.png)
 
-<br>
 
 ---
 
 ![](images/Windows/05_GitStartMenu.png)
 
-<br>
-
 ---
 
 ![](images/Windows/06_GitWhatsVim.png)
 
-<br>
 
 ---
 
 ![](images/Windows/07_GitDecide.png)
 
-<br>
-
 ---
 
 ![](images/Windows/08_GitCommandLine.png)
 
-<br>
 
 ---
 
 ![](images/Windows/09_GitBundledSSH.png)
 
-<br>
-
 ---
 
 ![](images/Windows/10_GitHTTPS.png)
-
-<br>
 
 ---
 
 ![](images/Windows/11_GitUnix.png)
 
-<br>
-
 ---
 
 ![](images/Windows/12_GitEmulator.png)
-
-<br>
 
 ---
 
 ![](images/Windows/13_GitPull.png)
 
-<br>
-
 ---
 
 ![](images/Windows/14_GitCredentialManager.png)
 
-<br>
-
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Having made it through all the niche customization screens, we finally reach the install button. 
 :::
+:::
+
+---
 
 ![](images/Windows/15_GitFileCatch.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 We then can wait for the install to complete.
 :::
+:::
+
+---
 
 ![](images/Windows/16_GitInstalling.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 And success, we have now installed Git. 
 :::
+:::
+
+---
 
 ![](images/Windows/17_GitInstalled.png)
 
-<br>
 
 ---
 
 
 ## Installing Positron
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Finally, you will install [Positron](https://positron.posit.co/). It is an integrated development environment (IDE) in which we will open, modify and run our code throughout the course.
 
 First, navigate to their [homepage](https://positron.posit.co/), and select the blue Download option button on the upper-right. 
 :::
-
-![](images/Windows/25_Positron.png)
-
-<br>
+:::
 
 ---
 
-::: {.notes}
+![](images/Windows/25_Positron.png)
+
+
+---
+
+::: {.fragment}
+::: {.callout-tip title="."}
 You will then need to accept the Elastic License agreement to use the software (we will cover this source-available license type and what it does later in the course).
 
 With the license accepted, you will be able to select your operating system. In this case, we will select Windows, specifally the user level install.
 :::
+:::
+
+---
 
 ![](images/Windows/26_UserInstall.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 You will then be prompted to select the location you want to save the installer to. We will generally save this to either Downloads or Desktop to make finding it easier.
 :::
+:::
+
+---
 
 ![](images/Windows/27_InstallerLocation.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Once the download is complete, double click on the installer, and again accept the license agreement. 
 :::
+:::
+
+---
 
 ![](images/Windows/28_Elastic.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Generally, Positron will be store its software folder under Program Files.
 :::
+:::
+
+---
 
 ![](images/Windows/29_SaveLocation.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Next up, accept the default options for the following screens
 :::
+:::
+
+---
 
 ![](images/Windows/30_Defaults.png)
-
-<br>
 
 ---
 
 ![](images/Windows/31_Defaults.png)
 
-<br>
+---
+
+::: {.fragment}
+::: {.callout-tip title="."}
+And finally, click Install.
+:::
+:::
 
 ---
 
-::: {.notes}
-And finally, click Install.
-:::
-
 ![](images/Windows/32_Defaults.png)
-
-<br>
 
 ---
 
 ![](images/Windows/34_Install.png)
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 If all goes well, you should then see the installation success page. 
 :::
+:::
+
+---
 
 ![](images/Windows/35_Success.png)
 
-<br>
 
 ---
 
 # Connecting GitHub and Positron
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Now that you have all the software installed, we need to make sure that everything is communicating properly with each other. To do this, we will start by making sure your GitHub account and Positron are connected. 
 
 When opening Positron for the first time, you will encounter the following view:
 :::
+:::
+
+---
 
 ![](images/Windows/36_PositronLanding.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 We will go over the various aspects of using Positron in the next [section](/course/00_Positron/index.qmd). For now select the "Start Session" button on the upper right, and then select the most recent/up-to-date R version. 
 :::
+:::
+
+---
 
 ![](images/Windows/37_AllHiddenCondas.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 R will proceed to activate, and you will see a message appear in the bottom center window (ie. console)
 :::
+:::
+
+---
 
 ![](images/Windows/38_Loaded.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Congratulations, we now know R is working correctly. Next up, connecting your GitHub account to Positron. To make this process easier, first log into your [GitHub](https://github.com/) account from your preferred web browser. 
 
 Once this is done, return to Positron, and click on the profile Icon and select "Sign with GitHub" option.
 :::
+:::
+
+---
 
 ![](images/Windows/39_GitHubSetup.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Positron will provide a popup containing a code you will need to give to GitHub to set up authentication. Proceed to click on the "Copy & Continue to GitHub" button. 
 :::
+:::
+
+---
 
 ![](images/Windows/40_Code.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 If you are already signed in, it will ask which account you want to connect Positron with. Select your GitHub account. 
 :::
+:::
+
+---
 
 ![](images/Windows/41_GitHub.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 You will then be prompted to paste the one-time code provided by Positron. Once pasted, click on Continue. 
 :::
+:::
+
+---
 
 ![](images/Windows/42_GitHubPassword.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 And select "Authorize posit-dev" to authorize Positron to interact with your GitHub Account.
 :::
+:::
+
+---
 
 ![](images/Windows/43_GitHubSetup.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Depending on your computer settings, you may be asked for your two-factor authorization passkey. If so, complete this step.
 :::
+:::
+
+---
 
 ![](images/Windows/44_Passkey.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 And if all works out, you should see the following succes page
 :::
+:::
+
+---
 
 ![](images/Windows/45_PasskeySuccess.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Returning to Positron, check the profile tab on the lower left and verify that it now shows your GitHub account. If it does, congrats! If not, close Positron, check the tab again, and repeat the above one-time code steps if needed.
 :::
+:::
+
+---
 
 ![](images/Windows/46_PositronSuccess.png)
 
-<br>
 
 ---
 
 # New Folder from Git
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 With [GitHub](https://github.com/) and Positron now connected, we will bring your two repositories (the README and the fork of CytometryInR) from GitHub to your local computer. 
 
 To this, first navigate to the Folder icon on the upper-right, and select the "New Folder from Git" option
 :::
+:::
+
+---
 
 ![](images/MacOS/24.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 Lets first bring in your forked version of the Cytometry in R repository. Depending on your GitHub username, you would either need to copy the URL from your browser, or swap in your username in place of UMGCCCFCSR in "https://github.com/UMGCCCFCSR/CytometryInR"
 :::
+:::
+
+---
 
 ![](images/FolderFromGit1.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 You will also be asked for a location to store your project folder. It is best to save the folder locally (avoid using OneDrive or other cloud locations for now), as it makes things easier to save or modify without running into permission issues. For most of our course examples, we will be saving our Project Folders under the Documents Folder.
 :::
+:::
+
+---
 
 ![](images/Import2.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 You may encounter a pop-up asking whether you trust the authors for that particular folder. For your own projects, you are the author, so go ahead and select Yes. Selecting No is a good precaution when bringing in a random GitHub project that you haven't had time to properly vet. 
 :::
+:::
+
+---
 
 ![](images/MacOS/28.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 And with that done, you should now see the forked Cytometry in R course contents appear within Positron.  
 :::
+:::
+
+---
 
 ![](images/Import2Done.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 We will now repeat the process to bring in youir GitHub profile's ReadMe repository. Depending on your GitHub username, you would either need to copy the URL from your browser, or swap in your username twice in place for each UMGCCCFCSR: "https://github.com/UMGCCCFCSR/UMGCCCFCSR" 
 :::
+:::
+
+---
 
 ![](images/FolderFromGit2.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 After pasting the URL, and selecting the folder to save your project folder to (Documents in our case), select OK.
 :::
+:::
+
+---
 
 ![](images/Import2.png)
 
-<br>
 
 ---
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 And after a quick import you should now see your ReadMe repository files available and ready to be modified on your local computer.
 :::
+:::
+
+---
 
 ![](images/Import2Done.png)
 
-<br>
 
 ---
 
 # Wrap-up
 
-::: {.notes}
+::: {.fragment}
+::: {.callout-tip title="."}
 In this walkthrough, we installed R, Rtools, Git and Positron. We also made sure to connect Positron and your GitHub account, and brought copies of your repositories into local project folders. With this, you now have on your workstation the major pieces of software needed for the course. 
 
 In the [next section](/course/00_Positron/), we will delve into how to use Positron, and explore more how to use the connection you set up with GitHub to send [changes](/course/00_Git/) from your local repositories back to GitHub.  
 :::
+:::
 
-<br>
 
 ---
 
